--- a/WindowsFormsApp1/Math.csproj
+++ b/WindowsFormsApp1/Math.csproj
@@ -33,7 +33,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>icon.ico</ApplicationIcon>
+    <ApplicationIcon>
+    </ApplicationIcon>
   </PropertyGroup>
   <PropertyGroup />
   <PropertyGroup />
@@ -61,6 +62,12 @@
     <Compile Include="AllThemes.Designer.cs">
       <DependentUpon>AllThemes.cs</DependentUpon>
     </Compile>
+    <Compile Include="Bookmarks.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Bookmarks.Designer.cs">
+      <DependentUpon>Bookmarks.cs</DependentUpon>
+    </Compile>
     <Compile Include="ThemeForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -77,6 +84,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="AllThemes.resx">
       <DependentUpon>AllThemes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Bookmarks.resx">
+      <DependentUpon>Bookmarks.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ThemeForm.resx">
       <DependentUpon>ThemeForm.cs</DependentUpon>
@@ -105,9 +115,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="icon.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
